Deactivated cpas.symbpredabs.shortestCexTraceUseSuffix (set to false) in query driven testing property files. Duplicated buildCounterexampleTrace2 (should not affect other parts of this class) in order to get index of last feasible element in a path. Changed outer loop to do analysis on ART exploiting feasibility information of paths to prune ART.
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@397 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c

--- a/test/query-driven-program-testing/config/basicblock.properties
+++ b/test/query-driven-program-testing/config/basicblock.properties
@@ -115,7 +115,8 @@ cpas.symbpredabs.abstraction.cartesian = true
 cpas.symbpredabs.smallSummaries = false
 
 cpas.symbpredabs.shortestCexTrace = true
-cpas.symbpredabs.shortestCexTraceUseSuffix = true
+#cpas.symbpredabs.shortestCexTraceUseSuffix = true
+cpas.symbpredabs.shortestCexTraceUseSuffix = false
 
 #cpas.symbpredabs.abstraction.norefinement = true
 # if set, will be used to initialize the predicate map
